<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1:2">
    <string name="app_name">"Order Your Coffee</string>
    <string name="action_settings">Settings</string>
    <string name="toppings">Topping</string>
    <string name="Name">Name</string>
    <string name="order">Order</string>
    <string name="Whipped_Cream">Whipped Cream</string>
    <string name="Chocolate">Chocolate</string>
    <string name="Mr.">Mister</string>
    <string name="Miss.">Miss</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="ORDER">Order</string>
    <string name="thank_you">Thank You !</string>
    <string name="order_summary_name">Name: <xliff:g id ="name" example= "Rudra">%s</xliff:g></string>

</resources>

