<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main"
    android:layout_marginTop="58dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.art.laukik.dristhi.MainActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/Name"
        android:ems="10"
        android:id="@+id/name_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:id="@+id/text_view_toppings"
        android:textAllCaps="true"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        style="@style/CustomText"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:text="@string/Whipped_Cream"
        android:textSize="16sp"
        android:id="@+id/whipped_cream_checkBox"
        android:paddingLeft="24dp"
        android:checked="false" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:text="@string/Chocolate"
        android:textSize="16sp"
        android:id="@+id/chocolate_checkbox"
        android:paddingLeft="24dp"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:id="@+id/quantity_text_view"
        android:textAllCaps="true"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        style="@style/CustomText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:id="@+id/minus"
            android:onClick="decrement"
            android:padding="8dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/display_quantity"
        android:layout_below="@+id/quantity"
        android:text="|"
        android:textSize="16sp"
        android:padding="8dp"
        android:textColor="@android:color/black"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:id="@+id/plus"
            android:onClick="increment"
            android:padding="8dp"/>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ORDER"
        android:id="@+id/order"
        android:layout_below="@+id/order_summary_text_view"
        android:onClick="submitOrder"/>

</LinearLayout>
    </ScrollView>